--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
       <div id="items"></div>
       <div id="characters">
         <div id="player"></div>
+        <div id="enemy"></div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
